Fix - category and tag spacing

--- a/assets/sass/site/primary/_posts.scss
+++ b/assets/sass/site/primary/_posts.scss
@@ -78,6 +78,14 @@
 			}
 		}
 	}
+
+	.entry-footer {
+
+		.cat-links,
+		.tags-links {
+			margin-right: 20px;
+		}
+	}
 }
 
 
